feat(view): add admin home view & sidebar

--- a/public/assets/style/adminStyle.css
+++ b/public/assets/style/adminStyle.css
@@ -56,7 +56,7 @@ body.dark .content .row .card-3 {
 }
 
 .header-text{
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .footer-wrapper {
