--- a/public/assets/style/adminStyle.css
+++ b/public/assets/style/adminStyle.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@100;300;400;500;600;700;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --body-color: white;
@@ -13,7 +12,7 @@
 }
 
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
   background-color: var(--body-color);
   color: var(--text-color);
@@ -52,7 +51,7 @@ body.dark .content .row .card-3 {
 }
 
 .header-logo{
-  width: 40px;
+  width: 50px;
 }
 
 .header-text{
@@ -533,7 +532,6 @@ color: black;
 }
 
 .content .table th{
-  padding: 12px 16px;
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
